fix buggy overflow by changing default margins

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,4 +6,5 @@
 
 .content {
   flex: 1;
+  margin: 8px;
 }
